Simplify logo structure and fix visibility issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,6 @@ p{font-family: 'Tenor Sans', sans-serif;}
   padding: 4rem 2rem;
   position: relative;
   margin-bottom: 8rem;
-  overflow: visible;
 }
 
 .column1 {
@@ -57,12 +56,11 @@ p{font-family: 'Tenor Sans', sans-serif;}
 }
 
 .column2 {
-  position: relative;
-  width: 40%;
-  height: 100vh;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
   z-index: 2;
 }
 
@@ -99,27 +97,22 @@ p{font-family: 'Tenor Sans', sans-serif;}
 }
 
 .square {
-  height: 30rem;
-  width: 30rem;
+  width: 400px;
+  height: 400px;
   border: 2px solid #d5e8b9;
+  position: relative;
+  transform: rotate(45deg);
   display: flex;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  z-index: 2;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
   background-color: rgba(255, 255, 255, 0.1);
 }
 
 .square img {
-  height: 25rem;
-  width: 25rem;
-  position: relative;
+  width: 350px;
+  height: 350px;
+  position: absolute;
   transform: rotate(-45deg);
-  z-index: 2;
   object-fit: contain;
 }
 
@@ -303,21 +296,18 @@ a{
   }
 
   .column2 {
-    position: relative;
     width: 100%;
-    height: auto;
     margin-top: 2rem;
-    z-index: 2;
   }
 
   .square {
-    height: 20rem;
-    width: 20rem;
+    width: 300px;
+    height: 300px;
   }
 
   .square img {
-    height: 15rem;
-    width: 15rem;
+    width: 250px;
+    height: 250px;
   }
 
   .container h1 {
